fix(side-nav): adjust z-index on overlay to cover table

--- a/packages/react/src/components/SideNav/_side-nav.scss
+++ b/packages/react/src/components/SideNav/_side-nav.scss
@@ -76,3 +76,7 @@ html[dir='rtl'] {
     margin-right: unset;
   }
 }
+
+.#{$prefix}--side-nav__overlay-active {
+  z-index: z('overlay');
+}
